<resources>
    <string name="app_name">Bulls And Cows</string>
    <string name="start_string_button">Start</string>
    <string name="dev_string_button">Developers</string>
    <string name="exit_string_button">Exit</string>
    <string name="logo_name_string">Bulls &amp; Cows</string>
    <string name="your_res_string">Your result will be here</string>
    <string name="project_dev_string">Project developer:</string>
    <string name="university">©Chernihiv Polytechnic National University</string>
    <string name="developer">Student of group PI-191 Serhiy Sezonchyk</string>
    <string name="restart">Restart</string>
    <string name="home">Home</string>
    <string name="confirm">Confirm</string>
    <string-array name="hard_levels_string">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>