<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DevActivity"
    android:background="@drawable/dev_game_background">
    <Button
        android:id="@+id/home_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/home"/>
    <TextView
        android:id="@+id/textViewRes"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="Your result will be here"
        android:textAlignment="center"
        android:textSize="18dp"
        android:layout_above="@id/et"
        android:layout_alignEnd="@id/et"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:id="@+id/et"
        android:inputType="number"
        android:textSize="20dp"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/confirmBut"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:text="@string/confirm"
        android:layout_below="@id/et"
        android:layout_alignStart="@id/et"/>
    <Button
        android:id="@+id/restart_button"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/restart"
        android:textSize="9dp"
        android:layout_marginLeft="2dp"
        android:layout_below="@id/et"
        android:layout_toRightOf="@id/confirmBut" />
    <ListView
        android:id="@+id/listOfAttemps"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_below="@id/confirmBut"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/confirmBut" />
</RelativeLayout>